# loop-engineering

./: .gitignore  .pre-commit-config.yaml  404.html  ADOPTERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_TREND_IMPLEMENTATION.md  HANDOFF_TO_WRITER.md  README.md  SECURITY.md  action.yml  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  reproduce_defects.py  requirements.txt  sitemap.xml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml  tests.yml
.loop_checkpoints/: checkpoint_0001.md
BASELINE_FAILURE_REPORT/: index.html
FINAL_VALIDATION_REPORT/: index.html
LAUNCH_COPY/: index.html
QUICKSTART/: index.html
RECOVERY_EXECUTION_SPECIFICATION/: index.html
RUNTIME_SEMANTICS_BASELINE/: index.html
STATE_MACHINE_IMPLEMENTATION/: index.html
STATE_MACHINE_SPECIFICATION/: index.html
STEP_LIFECYCLE_SPECIFICATION/: index.html
TECHNICAL_CORRECTIONS_V2/: index.html
TECHNICAL_CORRECTIONS_V3/: index.html
baselines/: __init__.py  chain_of_thought.py  one_shot.py
benchmarks/: __init__.py  base.py
benchmarks/tasks/: __init__.py  budget.py  correction.py  memory.py  multiagent.py  multihop.py  planning.py  tools.py
docs/: BASELINE_FAILURE_REPORT.md  FINAL_VALIDATION_REPORT.md  LAUNCH_COPY.md  QUICKSTART.md  RECOVERY_EXECUTION_SPECIFICATION.md  RUNTIME_SEMANTICS_BASELINE.md  STATE_MACHINE_IMPLEMENTATION.md  STATE_MACHINE_SPECIFICATION.md  STEP_LIFECYCLE_SPECIFICATION.md  TECHNICAL_CORRECTIONS_V2.md  TECHNICAL_CORRECTIONS_V3.md  index.md  tool-comparison.md
docs/patterns/: changelog-drafter.md  ci-sweeper.md  daily-triage.md  dependency-sweeper.md  issue-triage.md  post-merge-cleanup.md  pr-babysitter.md
examples/: deterministic_multistep_loop.py
experiments/: __init__.py  deterministic_runner.py  generate_figures.py  live_provider_smoke.py  runner.py
experiments/results/: README.md  ablation_results.json  deterministic_validation.json  live_provider_smoke_paid.json  main_results.json  redteam_results.json  statistical_analysis.json
loop_engine/: __init__.py  budget_caps.py  checkpoint.py  components.py  core.py  gates.py  llm_client.py  persistence.py  runtime_contracts.py  runtime_persistence.py  runtime_v1.py  separation.py  skills.py  types.py  worktree.py
loop_engine/budget/: __init__.py  budget_manager.py
loop_engine/cli/: __init__.py  main.py
loop_engine/memory/: __init__.py  memory.py
loop_engine/patterns/: __init__.py  daily_triage.py  pr_babysitter.py
loop_engine/recovery/: __init__.py  handlers.py
loop_engine/safety/: __init__.py  safety_monitor.py
search/: search_index.json
stories/: stripe.md
tool-comparison/: index.html
(+32 files in other folders)
