[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering"
version = "0.4.0"
description = "Loop Engineering - Design systems that prompt your agents. A research-grade Python runtime for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Loop Engineering Team"}
]
keywords = ["ai", "llm", "agents", "iteration", "recovery", "state-machine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "openai>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
loop-engine = "loop_engine.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["loop_engine*", "baselines*", "benchmarks*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
